Protected all GET routes with JWT
