# docs/swagger.json
@@ -196,6 +196,11 @@
         },
         "/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns a single user by their ID",
                 "consumes": [
                     "application/json"
